# yescaptcha-sdk

./: README.md  README_EN.md  pyproject.toml
src/yescaptcha/: __init__.py  client.py  exceptions.py  models.py
tests/: __init__.py  test_client.py  test_models.py
