[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yescaptcha"
version = "0.1.0"
description = "Python SDK for YesCaptcha API - Captcha solving service"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "SkyAerope", email = "skyaerope@gmail.com" }
]
keywords = ["captcha", "recaptcha", "hcaptcha", "turnstile", "cloudflare", "yescaptcha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://yescaptcha.com"
Documentation = "https://yescaptcha.atlassian.net/wiki/spaces/YESCAPTCHA/pages/63897603/YesCaptcha+API"
Repository = "https://github.com/SkyAerope/yescaptcha-sdk"
Issues = "https://github.com/SkyAerope/yescaptcha-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/yescaptcha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
